--- a/sw/control/KFDtool.Gui/Dialog/ContainerSetPassword.xaml
+++ b/sw/control/KFDtool.Gui/Dialog/ContainerSetPassword.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KFDtool.Gui.Dialog"
+        Style="{StaticResource CustomWindowStyle}"
         mc:Ignorable="d"
         Title="Set Container Password" Height="150" Width="400" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid>
