--- a/sw/control/KFDtool.Gui/Control/P25MultipleKeyload.xaml
+++ b/sw/control/KFDtool.Gui/Control/P25MultipleKeyload.xaml
@@ -21,8 +21,9 @@
         <Button Content="Add &gt;" HorizontalAlignment="Left" Margin="544,163,0,0" VerticalAlignment="Top" Width="75" Click="Groups_Add_Click"/>
         <Button Content="&lt; Remove" HorizontalAlignment="Left" Margin="544,195,0,0" VerticalAlignment="Top" Width="75" Click="Groups_Remove_Click"/>
         <ListBox Name="lbGroupsSelected" ItemsSource="{Binding Path=GroupsSelected}" DisplayMemberPath="Value" HorizontalAlignment="Left" Height="275" Margin="624,54,0,0" VerticalAlignment="Top" Width="140" SelectionMode="Extended"/>
-        <ComboBox Name="dropKeksAvailable" ItemsSource="{Binding Path=KeksAvailable}" DisplayMemberPath="Value" HorizontalAlignment="Left" Margin="20,345,0,0" VerticalAlignment="Top" Width="175"/>
+        <ComboBox Name="dropKeksAvailable" ItemsSource="{Binding Path=KeksAvailable}" DisplayMemberPath="Value" HorizontalAlignment="Left" Margin="52,345,0,0" VerticalAlignment="Top" Width="175"/>
         <Button Content="Load" HorizontalAlignment="Left" Margin="310,345,0,0" VerticalAlignment="Top" Width="75" Click="Load_Click"/>
         <Button Content="Elite Export" HorizontalAlignment="Left" Margin="400,345,0,0" VerticalAlignment="Top" Width="75" Click="Export_Click"/>
+        <Label Content="KEK" HorizontalAlignment="Left" Margin="19,342,0,0" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
