add helper keyboard bindings for insert and delete to the container edit dialog;

--- a/sw/control/KFDtool.Gui/Dialog/ContainerEdit.xaml
+++ b/sw/control/KFDtool.Gui/Dialog/ContainerEdit.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="Edit Container" Height="600" Width="950" MinHeight="600" MinWidth="950" WindowStartupLocation="CenterOwner"
         Closing="ContainerEdit_Closing">
+    <Window.CommandBindings>
+        <CommandBinding Command="{x:Static local:ContainerEdit.InsertCommand}" Executed="New_Click" />
+        <CommandBinding Command="{x:Static local:ContainerEdit.DeleteCommand}" Executed="Delete_Click" />
+    </Window.CommandBindings>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
